--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "author": "Eduardo Unrrein",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.0.6",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.7.5"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
